// This proto contains gRPC definition for chain_x service
syntax = "proto3";

package chain_2;

option go_package = "github.com/hanapedia/microservice-topologies/chain/chain_2/pb_chain_2";

service Chain_2 {
  rpc GetIds(Req) returns (Res); 
  }

message Res {
    repeated int32 ids = 1;
  }

message Req {
    repeated int32 ids = 1;
  }

