// This proto contains gRPC definition for chain_1 service
syntax = "proto3";

package chain_1;

option go_package = "github.com/hanapedia/microservice-topologies/chain/chain_1/pb_chain_1";

service Chain_1 {
  rpc GetIds(Req) returns (Res); 
  }

message Res {
    repeated int32 ids = 1;
  }

message Req {
    repeated int32 ids = 1;
  }
